--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,3 +1,4 @@
+
 <h1>All users</h1>
 <ul>
   <% @users.each do |user| %>
@@ -10,3 +11,4 @@
   </li>
   <% end %>
 </ul>
+<%= link_to "後台首頁", admin_root_path %>
