--- a/app/views/desserts/index.html.erb
+++ b/app/views/desserts/index.html.erb
@@ -1,2 +1,9 @@
 <h1>前台首頁</h1>
 <%= link_to "後台首頁", admin_root_path %>
+
+<% @desserts.each do |dessert| %>
+  <%= image_tag dessert.image.url if dessert.image? %>
+  <%= dessert.name %>
+<% end %>
+
+<%= link_to 'New Dessert', new_dessert_path %>
