--- a/app/views/desserts/new.html.erb
+++ b/app/views/desserts/new.html.erb
@@ -11,6 +11,9 @@
   <%= f.label :name, 'Name' %>
   <%= f.text_field :name %>
   <br>
+  <%= f.label :image, "Image" %>
+  <%= f.file_field :image %>
+  <br>
   <%= f.label :price, 'Price' %>
   <%= f.text_field :price %>
   <br>
