change production_time to be string in dessert model

--- a/app/views/desserts/show.html.erb
+++ b/app/views/desserts/show.html.erb
@@ -9,7 +9,7 @@
 
 <p>面交地點： <%= @dessert.location %></p>
 
-<p>製作所需時間：</p>
+<p>製作所需時間：<%= @dessert.production_time %></p>
 
 <p>集資截止時間： <%= @dessert.excess_time %></p>
 
