--- a/app/views/desserts/new.html.erb
+++ b/app/views/desserts/new.html.erb
@@ -27,7 +27,7 @@
   <%= f.text_field :description %>
   <br>
   <%= f.label :production_time, 'Production time' %>
-  <%= f.date_select :production_time %>
+  <%= f.text_field :production_time %>
   <br>
   <%= f.label :excess_time, 'Excess time' %>
   <%= f.datetime_select :excess_time %>
