--- a/app/views/desserts/new.html.erb
+++ b/app/views/desserts/new.html.erb
@@ -24,7 +24,7 @@
   <%= f.text_field :location %>
   <br>
   <%= f.label :description, 'Description' %>
-  <%= f.text_field :description %>
+  <%= f.text_area :description %>
   <br>
   <%= f.label :production_time, 'Production time' %>
   <%= f.text_field :production_time %>
