--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,3 +10,14 @@
 <h3><%= @user.name %></h3>
 <p><%= @user.email %></p>
 <p><%= simple_format @user.intro %></p>
+
+<hr>
+
+<h3>你發起的甜點集資</h3>
+
+<% @desserts.each do |dessert| %>
+  <%= link_to dessert_path(dessert) do %>
+    <%= image_tag dessert.image.url if dessert.image? %>
+    <h4><%= dessert.name %></h4>
+  <% end %>
+<% end %>
