--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>JustDessert2</title>
+
+    <link rel ="stylesheet" href="css/reset.css">
+    <link rel ="stylesheet" href="css/style.css">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <title>JustDessert2</title>
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
+    <header class ="header">
+     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
     <% if current_user %>
@@ -23,5 +27,14 @@
     <% end %>
 
     <%= yield %>
+    </header>
+    <div class ="main">
+    </div>
+    <footer class ="footer text-center">
+      <h2>吃甜甜</h2>
+      <h5>Copyright © 2018 CSY cooperation</h5>
+    </footer>
+
+
   </body>
 </html>
