--- a/app/views/desserts/index.html.erb
+++ b/app/views/desserts/index.html.erb
@@ -1,2 +1,15 @@
-<h1>前台首頁</h1>
-<%= link_to "後台首頁", admin_root_path %>
+<div class="control-bar">
+  <h3>控制列</h3>
+</div>
+<div class="inline-box">
+  <h3>甜點盒子</h3>
+  <section class="item">
+    <a href="#">
+      <img class="image" src="images/avatar.png" alt="Desserts">
+      <div class="category">蛋糕</div>
+      <div class="location">大安站</div>
+    </a>
+  </section>
+</div>
+
+
