--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+
 html{
   font-size:62.5%
 }
@@ -33,15 +34,60 @@ a:link, a:visited, a:hover, a:active {
 }
 
 
-.header{
-  width:100%;
-}
+
 .main{
   width:970px;
   margin:30px auto 40px;
 }
-.footer{
-  width:100%;
+
+#Header{
+　width:360px;
+　height:80px;
+　text-align:center;
+　line-height:80px;
+　font-size:15px;
+　color:#fffaf3;
+　font-weight:bold;
+　background-color:#f9c81e;
 }
 
+#body{
+　width:240px;
+　height:280px;
+　text-align:center;
+　line-height:280px;
+　font-size:15px;
+　color:#f9c81e;
+　font-weight:bold;
+　background-color:#fffaf3;
+　float:left;
+}
+#Footer{
+　width:360px;
+　height:80px;
+　text-align:center;
+　line-height:80px;
+　font-size:15px;
+　color:#fffaf3;
+　font-weight:bold;
+　background-color:#f9c81e;
+}
 
+.header,.main,.footer {
+  border:1px solid #aaa;
+}
+.header,.footer {
+  height: 100px;
+}
+.main {
+  height:500px;
+}
+
+.img-circle-navbar{
+  margin-right: 5px;
+  width: 40px;
+  height: 40px;
+}
+.control-bar {
+  border:1px solid #aaa;
+}
