update dessert index layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -88,6 +88,12 @@ a:link, a:visited, a:hover, a:active {
   width: 40px;
   height: 40px;
 }
+
+.img-dessert{
+  margin-right: 5px;
+  width: 200px;
+  height: 200px;
+}
 .control-bar {
   border:1px solid #aaa;
 }
