--- a/app/views/desserts/index.html.erb
+++ b/app/views/desserts/index.html.erb
@@ -1,6 +1,9 @@
 
 <div class="control-bar">
-  <h3>控制列</h3>
+  <div class="container">
+  <a class="btn btn-1">熱門</a>
+  <a class="btn btn-2">距離</a>
+  </div>
 </div>
 <div class="inline-box">
   <h3>甜點盒子</h3>
