add contact info to user edit form & and profile link to drop-down menu

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -16,6 +16,6 @@
   <%= f.label :phone, '訂購人電話' %>
   <%= f.text_field :phone %>
   <br>
-  <%= f.submit %>
+  <%= f.submit '確認訂單' %>
   <%= f.button 'Cancel', type: :reset %>
 <% end %>
