--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -8,7 +8,7 @@
 <br>
 
 <%= form_for [@dessert, @order] do |f| %>
-  <%= f.label :amount, '訂購數量' %><!-- 改下拉選單 -->
+  <%= f.label :amount, '訂購數量' %>
   <%= f.text_field :amount %>
   <br>
   <%= f.label :name, '訂購人姓名' %>
