--- a/app/views/desserts/show.html.erb
+++ b/app/views/desserts/show.html.erb
@@ -11,7 +11,10 @@
 
 <p>Price: $ <%= @dessert.price %> / each</p>
 
-<p>還有 <%= @dessert.amount %> 個集資成功      <%= link_to '立即贊助', new_dessert_order_path(@dessert) %></p>
+<p>
+  還有 <%= @dessert.amount %> 個集資成功      
+  <%= link_to '立即贊助', new_dessert_order_path(@dessert) %>
+</p>
 
 <p>面交地點： <%= @dessert.location %></p>
 
