hide purchase button from owner

--- a/app/views/desserts/show.html.erb
+++ b/app/views/desserts/show.html.erb
@@ -12,8 +12,10 @@
 <p>Price: $ <%= @dessert.price %> / each</p>
 
 <p>
-  還有 <%= @dessert.amount %> 個集資成功      
-  <%= link_to '立即贊助', new_dessert_order_path(@dessert) %>
+  還有 <%= @dessert.amount %> 個集資成功
+  <% if current_user.id != @dessert.user_id %>      
+    <%= link_to '立即贊助', new_dessert_order_path(@dessert) %>
+  <% end %>
 </p>
 
 <p>面交地點： <%= @dessert.location %></p>
