--- a/app/views/desserts/show.html.erb
+++ b/app/views/desserts/show.html.erb
@@ -2,7 +2,8 @@
 
 <% if current_user.id == @dessert.user_id %>
   <%= link_to 'Edit', edit_dessert_path(@dessert) %> | 
-  <%= link_to 'Delete', dessert_path(@dessert), method: :delete, data: {confirm:"Are you sure?"} %>
+  <%= link_to 'Delete', dessert_path(@dessert), method: :delete, data: {confirm:"Are you sure?"} %> | 
+  <%= link_to '訂單狀況' %>
 <% end %>
 
 <h3><%= @dessert.name %></h3>
