show buyer details on order_list page for each dessert

--- a/app/views/desserts/order_list.html.erb
+++ b/app/views/desserts/order_list.html.erb
@@ -1,1 +1,7 @@
 <h1>Order List</h1>
+
+<% @orders.each do |order| %>
+  訂購人姓名：<%= order.name %>  |  
+  訂購人電話：<%= order.phone %>  |  
+  訂購數量：<%= order.amount %>  
+<% end %>
