show dessert name on order_list page

--- a/app/views/desserts/order_list.html.erb
+++ b/app/views/desserts/order_list.html.erb
@@ -1,4 +1,6 @@
-<h1>Order List</h1>
+<h1>Order List for <%= @dessert.name %></h1>
+
+<hr>
 
 <% @orders.each do |order| %>
   訂購人姓名：<%= order.name %>  |  
