--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -12,13 +12,13 @@
 <h2>Order Form</h2>
 
 <%= image_tag @dessert.image.url if @dessert.image? %>
-<p>還有 <%= @dessert.amount %> 個集資成功</p>
+<p>還有 <%= @dessert.amount %> 個集資成功 *每人限購數量：2</p>
 
 <br>
 
 <%= form_for [@dessert, @order] do |f| %>
   <%= f.label :amount, '訂購數量' %>
-  <%= f.select :amount, [1,2,3,4,5] %>
+  <%= f.select :amount, [1,2] %>
   <br>
   <%= f.label :name, '訂購人姓名' %>
   <%= f.text_field :name %>
