show order status on order list page

--- a/app/views/desserts/order_list.html.erb
+++ b/app/views/desserts/order_list.html.erb
@@ -8,5 +8,6 @@
       <%= order.name %>
     <% end %>  |  
   訂購人電話：<%= order.phone %>  |  
-  訂購數量：<%= order.amount %>  
+  訂購數量：<%= order.amount %>  |  
+  狀態：<%= order.shipping_status %>  
 <% end %>
