--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -12,19 +12,22 @@
 <h2>Order Form</h2>
 
 <%= image_tag @dessert.image.url if @dessert.image? %>
-<p>還有 <%= @dessert.amount %> 個集資成功 *每人限購數量：2</p>
+<p>還有 <%= @dessert.amount %> 個集資成功</p>
 
 <br>
 
 <%= form_for [@dessert, @order] do |f| %>
   <%= f.label :amount, '訂購數量' %>
-  <%= f.select :amount, [1,2] %>
+  <%= f.select :amount, [1,2] %> *必填
   <br>
   <%= f.label :name, '訂購人姓名' %>
-  <%= f.text_field :name %>
+  <%= f.text_field :name %> *必填
   <br>
   <%= f.label :phone, '訂購人電話' %>
-  <%= f.text_field :phone %>
+  <%= f.text_field :phone %> *必填
+  <br>
+  <%= f.label :message, '留言給賣家' %>
+  <%= f.text_area :message %>
   <br>
   <%= f.submit '確認訂單' %>
   <%= f.button 'Cancel', type: :reset %>
