seller can see buyer message from order list

--- a/app/views/desserts/order_list.html.erb
+++ b/app/views/desserts/order_list.html.erb
@@ -9,5 +9,6 @@
     <% end %>  |  
   訂購人電話：<%= order.phone %>  |  
   訂購數量：<%= order.amount %>  |  
-  狀態：<%= order.shipping_status %>  
+  買家留言：<%= order.message %>  |  
+  狀態：<%= order.shipping_status %>
 <% end %>
