--- a/app/views/desserts/order_list.html.erb
+++ b/app/views/desserts/order_list.html.erb
@@ -9,6 +9,7 @@
     <% end %>  |  
   訂購人電話：<%= order.phone %>  |  
   訂購數量：<%= order.amount %>  |  
+  總金額：<%= order.order_price %>  |  
   買家留言：<%= order.message %>  |  
   狀態：<%= order.shipping_status %>
 <% end %>
