--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -3,5 +3,7 @@
 <%= simple_format @order.seller.contact_info %>
 <hr>
 <%= image_tag @order.dessert.image.url, width:'100px' if @order.dessert.image? %>
+<p>訂購數量：<%= @order.amount %></p>
+<p>訂單金額：<%= @order.order_price %></p>
 <p>面交時間：<%= time_tag @order.dessert.pick_time %></p>
 <p>面交地點：<%= @order.pick_location %></p>
