purchase amount cannot over dessert amount & add notice and alert to navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,8 @@
           <%= image_tag "logo.png",class: "img-circle-navbar pull-left" %>
         <% end %>
 
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
 
           <div class="pull-right align-middle">
             <% if current_user %>
