link cancel button to dessert_path

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -31,5 +31,5 @@
   <%= f.text_area :message %>
   <br>
   <%= f.submit '確認訂單' %>
-  <%= f.button 'Cancel', type: :reset %>
+  <%= link_to 'Cancel', dessert_path(@dessert) %>
 <% end %>
