--- a/app/views/desserts/show.html.erb
+++ b/app/views/desserts/show.html.erb
@@ -10,6 +10,12 @@
 
 <p><%= image_tag @dessert.image.url if @dessert.image? %></p>
 
+<p>創作者：
+  <%= link_to user_path(@dessert.user) do %>
+    <%= @dessert.user.name %>    
+  <% end %>
+</p>
+
 <p>Price: $ <%= @dessert.price %> / each</p>
 
 <p>
