--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -3,7 +3,7 @@
 <ul>
   <% @users.each do |user| %>
   <li>
-    <%= user.avatar %>
+    <%= image_tag user.avatar.url if user.avatar? %>
     <%= user.name %>
     <%= user.email %>
     <%= user.intro %>
