--- a/app/views/desserts/show.html.erb
+++ b/app/views/desserts/show.html.erb
@@ -37,6 +37,19 @@
 
 <p>介紹： <%= simple_format @dessert.description %></p>
 
+<hr>
+
+<% @dessert.comments.each do |comment| %>
+    <div>
+      <h4><strong><%= comment.user.name %></strong></h4>
+      <p><%= simple_format comment.content %></p>
+      <p class="text-muted">
+        <em><%= "about " + time_ago_in_words(comment.created_at) + " ago" %></em>
+      </p>
+    </div>
+    <hr>
+    <% end %>
+
 <div class="container">
   <div class="row">
     <%= form_for [@dessert, @comment] do |f| %>
