--- a/app/views/desserts/show.html.erb
+++ b/app/views/desserts/show.html.erb
@@ -47,19 +47,24 @@
         <em><%= "about " + time_ago_in_words(comment.created_at) + " ago" %></em>
       </p>
     </div>
+    <div>
+      <% if current_user.admin? %>
+        <%= link_to "Delete", dessert_comment_path(@dessert, comment), method: :delete %>
+      <% end %>
+    </div>
     <hr>
     <% end %>
 
 <div class="container">
   <div class="row">
     <%= form_for [@dessert, @comment] do |f| %>
-       <div class="form-group">
-         <%= f.text_area :content, placeholder: "留個言吧", class: "form-control" %>
-       </div>
-       <div class="form-group">
-         <%= f.submit class: "btn btn-primary" %>
-         <%= f.button "Cancel", type: :reset, class: "btn btn-default" %>
-       </div>
+      <div class="form-group">
+        <%= f.text_area :content, placeholder: "留個言吧", class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.submit class: "btn btn-primary" %>
+        <%= f.button "Cancel", type: :reset, class: "btn btn-default" %>
+      </div>
     <% end %>
   </div>
 </div>
