--- a/app/views/desserts/show.html.erb
+++ b/app/views/desserts/show.html.erb
@@ -40,33 +40,49 @@
 <hr>
 
 <% @dessert.comments.each do |comment| %>
-    <div>
-      <h4><strong><%= comment.user.name %></strong></h4>
-      <p><%= simple_format comment.content %></p>
-      <p class="text-muted">
-        <em><%= "about " + time_ago_in_words(comment.created_at) + " ago" %></em>
-      </p>
-    </div>
-    <div>
-      <% if current_user.admin? %>
-        <%= link_to "Delete", dessert_comment_path(@dessert, comment), method: :delete %>
-      <% end %>
-    </div>
-    <hr>
-    <% end %>
-
-<div class="container">
-  <div class="row">
-    <%= form_for [@dessert, @comment] do |f| %>
-      <div class="form-group">
-        <%= f.text_area :content, placeholder: "留個言吧", class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.submit class: "btn btn-primary" %>
-        <%= f.button "Cancel", type: :reset, class: "btn btn-default" %>
-      </div>
+  <div>
+    <h4><strong><%= comment.user.name %></strong></h4>
+    <p><%= simple_format comment.content %></p>
+    <p class="text-muted">
+      <em><%= "about " + time_ago_in_words(comment.created_at) + " ago" %></em>
+    </p>
+  </div>
+  <div>
+    <% if current_user.admin? %>
+      <%= link_to "Delete", dessert_comment_path(@dessert, comment), method: :delete %>
     <% end %>
   </div>
-</div>
+  <% if current_user.id == @dessert.user_id %>
+    <div class="container">
+      <div class="row">
+        <%= form_for [@dessert, comment, @reply] do |f| %>
+          <div class="form-group">
+            <%= f.text_area :content, placeholder: "回覆", class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.submit class: "btn btn-primary" %>
+            <%= f.button "Cancel", type: :reset, class: "btn btn-default" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
+  <hr>
+<% end %>
 
+<% if current_user.id != @dessert.user_id %>
+  <div class="container">
+    <div class="row">
+      <%= form_for [@dessert, @comment] do |f| %>
+        <div class="form-group">
+          <%= f.text_area :content, placeholder: "留個言吧", class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.submit class: "btn btn-primary" %>
+          <%= f.button "Cancel", type: :reset, class: "btn btn-default" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+<% end %>
 <%= link_to '回到前台首頁', root_path %>
