--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,5 +1,11 @@
 <h2>您已贊助成功</h2>
-<p>以下是賣家給您的留言：</p>
+<p>
+  以下是賣家
+  <%= link_to user_path(@order.seller) do %>
+    <%= @order.seller.name %>
+  <% end %>
+  給您的留言：
+</p>
 <%= simple_format @order.seller.contact_info %>
 <hr>
 <%= image_tag @order.dessert.image.url, width:'100px' if @order.dessert.image? %>
