--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,13 @@
           <%= image_tag "logo.png",class: "img-circle-navbar pull-left" %>
         <% end %>
 
+        <!-- notice & alert 要放在navbar上 勿放進下拉選單 -->
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
+        
+        <% if current_user %>
+          <p>Hi, <%= current_user.name %></p><!-- 跟登入的使用者打招呼 -->
+        <% end %>
 
           <div class="pull-right align-middle">
             <% if current_user %>
