--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -2,12 +2,11 @@
 <ul>
   <% @users.each do |user| %>
   <li>
-    <%= image_tag user.avatar.url if user.avatar? %>
-    <%= user.name %>
-    <%= user.email %>
-    <%= user.intro %>
-    <%= user.contact_info %>
-    <%= user.role %>
+    <%= image_tag user.avatar.url if user.avatar? %><br>
+    Name: <%= user.name %><br>
+    Email: <%= user.email %><br>
+    Intro: <%= user.intro %><br>
+    Role: <%= user.role %>
   </li>
   <% end %>
 </ul>
