--- a/app/assets/stylesheets/admin/desserts.scss
+++ b/app/assets/stylesheets/admin/desserts.scss
@@ -1,3 +1,46 @@
 // Place all the styles related to the admin::desserts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.wrapper{
+font-family:sans-serif;
+width: 80%;
+margin: 0 auto;
+position:relative;
+}
+img{
+opacity: 1;
+display: block;
+width:100%;
+height: auto;
+transition: .5s ease;
+}
+.content{
+position: absolute;
+top:45%;
+left: 50%;
+transform: translate(-50%, -50%);
+-ms-transform: translate(-50%, -50%);
+text-transform: uppercase;
+font-size: 60px;
+color:#fff;
+white-space: nowrap;
+overflow: hidden
+}
+.content a{
+font-size: 24px;
+display: block;
+background-color: #ff771d;
+text-align: center;
+padding: 10px;
+cursor: pointer
+}
+.overlay{
+opacity: 0
+}
+.wrapper:hover img{
+opacity: .5
+}
+.wrapper:hover .overlay{
+opacity: 1
+}
