--- a/app/views/admin/desserts/index.html.erb
+++ b/app/views/admin/desserts/index.html.erb
@@ -1,2 +1,22 @@
 <%= link_to "前台首頁", root_path %>
 <%= link_to "所有使用者", admin_users_path %>
+
+<div class="wrapper">
+<img src="file:///Users/Casey/just-dessert2/just-dessert2/app/assets/images/1.jpg">
+
+
+
+<div class="overlay">
+
+
+<div class="content">
+the title <a>read more</a>
+</div>
+
+
+
+</div>
+
+
+
+</div>
