--- a/app/views/desserts/index.html.erb
+++ b/app/views/desserts/index.html.erb
@@ -5,37 +5,24 @@
   <a class="btn btn-2">距離</a>
   </div>
 </div>
-<div class="inline-box">
-  <h3>甜點盒子</h3>
-  <section class="item">
 
-
-    <div class="box panel col-md-3 panel-default">
-      <div class="panel-heading text-center">
-
-      </div>
-
-      <div class="panel-body">
-        <a href="#">
-        <% @desserts.each do |dessert| %>
+     <div class="item-box col-md-12 " style= height=900px;>
+      <% @desserts.each do |dessert| %>
+      <div class ="box2 col-md-4">
         <%= link_to dessert_path(dessert) do %>
+        <%= dessert.name %>
+        <br>
         <%= image_tag dessert.image_url(:thumb) if dessert.image? %>
-        <h4><%= dessert.name %></h4>
+      <% end %>
 
-
-
-        <% end %>
       </div>
-      <div class="panel-body-nav">
-      </div>
+      <% end %>
 
-      <div class="panel-footer">
-      </div>
 
   </div>
 
- <% end %>
-  </section>
 
-</div>
+
+
+
 
