--- a/app/views/desserts/show.html.erb
+++ b/app/views/desserts/show.html.erb
@@ -1,14 +1,17 @@
+
+<div class="col-md-12 ">
 <hr>
 
 <% if current_user.id == @dessert.user_id %>
-  <%= link_to 'Edit', edit_dessert_path(@dessert) %> | 
+  <%= link_to 'Edit', edit_dessert_path(@dessert) %> |
   <%= link_to 'Delete', dessert_path(@dessert), method: :delete, data: {confirm:"Are you sure?"} %>
 <% end %>
-
+<div class="col-md-5 ">
 <h3><%= @dessert.name %></h3>
 
-<p><%= image_tag @dessert.image.url if @dessert.image? %></p>
-
+<p><%= image_tag @dessert.image_url(:thumb) if @dessert.image? %></p>
+</div>
+<div class="col-md-5 ">
 <p>Price: $ <%= @dessert.price %> / each</p>
 
 <p>還有 <%= @dessert.amount %> 個集資成功      <%= link_to '立即贊助', new_order_path %></p>
@@ -25,3 +28,6 @@
 
 
 <%= link_to '回到前台首頁', root_path %>
+</div>
+
+</div>
