--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,16 +62,13 @@ a:link, a:visited, a:hover, a:active {
 　background-color:#fffaf3;
 　float:left;
 }
-#Footer{
-　width:360px;
-　height:80px;
-　text-align:center;
-　line-height:80px;
-　font-size:15px;
-　color:#fffaf3;
-　font-weight:bold;
-　background-color:#f9c81e;
+
+.footer {
+　height: 100px;
+　position: relative;
+　margin-top: -100px;
 }
+
 
 .header,.main,.footer {
   border:1px solid #aaa;
