--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -84,6 +84,9 @@ a:link, a:visited, a:hover, a:active {
   margin-right: 5px;
   width: 40px;
   height: 40px;
+  border-radius: 50%;
+  border:5px solid #fff;
+
 }
 
 .img-dessert{
