--- a/app/assets/stylesheets/desserts.scss
+++ b/app/assets/stylesheets/desserts.scss
@@ -79,3 +79,22 @@ body{
   height: 900px;
 }
 
+body {
+    background:#ccc;
+}
+.circle {
+    display: inline-block;
+    width: 100px;
+    height:100px;
+    border-radius: 50%;
+    border: 1px solid #eee;
+    padding: 5px;
+    background:#fff;
+}
+.inner {
+    background-image: url(//placeimg.com/320/180/nature);
+    background-size:cover;
+    background-position:center center;
+    height: 100%;
+    border-radius:50%;
+}
