--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,10 +21,6 @@
         <%= link_to root_path do %>
           <%= image_tag "logo.png",class: "img-circle-navbar pull-left" %>
         <% end %>
-
-        <!-- notice & alert 要放在navbar上 勿放進下拉選單 -->
-        <p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
         
         <% if current_user %>
           <p>Hi, <%= current_user.name %></p><!-- 跟登入的使用者打招呼 -->
@@ -56,7 +52,9 @@
 
 
 
-
+    <!-- notice & alert 勿放進下拉選單 -->
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 
 
 
