--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
 <h3><%= @user.name %></h3>
 
 <!-- 測試! IG username -->
-<h3>IG username: <%= @username %></h3>
+<h3><!-- IG username: <%= @username %> --></h3>
 
 <p><%= @user.email %></p>
 <p><%= simple_format @user.intro %></p>
